--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.8.3",
     "react-confirm-alert": "^2.1.0",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "simple-react-validator": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
